# libprs-orphaned

./: CMakeLists.txt  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  TODO  build.sh  clean.sh  configure  configure.ac  prs.h.in  prs.pc.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
include/: bitfiddle.h  bitmap.h  clogger.h  endian.h  export.h  file.h  sockhelp.h  sockpoll.h  ulist.h  unused.h  uqueue.h  ustack.h  utree.h  vector.h
man/man3/: bitmap.3  sockhelp.3  ustack.3
src/: Makefile  Makefile.am  Makefile.in  bitfiddle.c  bitmap.c  clogger.c  clogger.h  endian.c  file.c  file.h  prs.pc  prslib.h  sockhelp.c  sockpoll.c  ulist.c  uqueue.c  ustack.c  utree.c
test/: CMakeLists.txt  Makefile.am  Makefile.in  test.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
test/sockhelp/: CMakeLists.txt  Makefile.am  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
test/ulist/: CMakeLists.txt  test1.c  test2.c  test3.c  test4.c  test5.c
tests/: Makefile  test.c  test2.c
