AM_CFLAGS=-std=c89 -Wall -Werror -I../include
TESTS = test test2 test3 test4
check_PROGRAMS = test test2 test3 test4
test_SOURCES = test.c
test_LDADD = ../src/libprs.la
test2_SOURCES = test2.c
test2_LDADD = ../src/libprs.la
test3_SOURCES = test3.c
test3_LDADD = ../src/libprs.la
test4_SOURCES = test4.c
test4_LDADD = ../src/libprs.la
