AM_CFLAGS=-std=c89 -Wall -Werror -I../include
TESTS = test test2 test3 test4 test5 test6
check_PROGRAMS = test test2 test3 test4 test5 test6
test_SOURCES = test.c
test_LDADD = ../src/libprs.la
test2_SOURCES = test2.c
test2_LDADD = ../src/libprs.la
test3_SOURCES = test3.c
test3_LDADD = ../src/libprs.la
test4_SOURCES = test4.c
test4_LDADD = ../src/libprs.la
test5_SOURCES = test5.c
test5_LDADD = ../src/libprs.la
test6_SOURCES = test6.c
test6_LDADD = ../src/libprs.la
