cmake_minimum_required(VERSION 2.6)
add_executable(sockhelp_test1 test1.c)
target_link_libraries(sockhelp_test1 prs)
add_executable(sockhelp_test2 test2.c)
target_link_libraries(sockhelp_test2 prs)
add_executable(sockhelp_test3 test3.c)
target_link_libraries(sockhelp_test3 prs)
add_executable(sockhelp_test4 test4.c)
target_link_libraries(sockhelp_test4 prs)
add_executable(sockhelp_test5 test5.c)
target_link_libraries(sockhelp_test5 prs)
add_executable(sockhelp_test6 test6.c)
target_link_libraries(sockhelp_test6 prs)
