cmake_minimum_required(VERSION 2.6)
add_executable(sockhelp_test1 test1.c)
target_link_libraries(sockhelp_test1 prs)
add_executable(sockhelp_test2 test2.c)
target_link_libraries(sockhelp_test2 prs)
add_executable(sockhelp_test3 test3.c)
target_link_libraries(sockhelp_test3 prs)
add_executable(sockhelp_test4 test4.c)
target_link_libraries(sockhelp_test4 prs)
add_executable(sockhelp_test5 test5.c)
target_link_libraries(sockhelp_test5 prs)
add_executable(sockhelp_test6 test6.c)
target_link_libraries(sockhelp_test6 prs)
#testing for sockhelp
add_test(sockhelp_test1 sockhelp_test1)
add_test(sockhelp_test2 sockhelp_test2)
add_test(sockhelp_test3 sockhelp_test3)
add_test(sockhelp_test4 sockhelp_test4)
add_test(sockhelp_test5 sockhelp_test5)
add_test(sockhelp_test6 sockhelp_test6)
